[AIX, testbug] MachCodeFramesInErrorFile test fails to find 'Native frames' text

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 19
    • Affects Version/s: None
    • Component/s: hotspot
    • b20
    • aix

      MachCodeFramesInErrorFile.java looks for the text 'Native frames' in the output after crashInJava. This fails on AIX because the os::platform_print_native_stack runs instead of vmError::print_native_stack [edit: ...which doesn't produce the 'Native frames: ' text that the test is expecting].

            Assignee:
            Tyler Steele
            Reporter:
            Tyler Steele
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: