8283643: [AIX, testbug] MachCodeFramesInErrorFile test fails to find 'Native frames' text

Reviewed-by: dnsimon, dholmes