src/hotspot/os/aix/porting_aix.cpp
@@ -702,7 +702,7 @@ void AixNativeCallstack::print_callstack_for_context(outputStream* st, const uco
     stack_size = stackbounds.size;
   }
 
-  st->print_cr("------ current frame:");
+  st->print_cr("Native frame:");
   st->print("iar:  " PTR64_FORMAT " ", p2i(cur_iar));
   print_info_for_pc(st, cur_iar, buf, buf_size, demangle);
   st->cr();
